# back-office

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  pyproject.toml
backoffice/: __init__.py  __main__.py  cli.py  config.py  ingest.py  ledger.py  model.py  money.py  pdf.py  render.py  scaffold.py
backoffice/templates/: invoice.html.j2
examples/: _ledger.yml  studio.yml
examples/clients/: acme.yml
examples/contracts/: acme-msa.md
examples/expenses/: 2026-05-12-cloudhost.yml
examples/forms/: .gitkeep
examples/invoices/acme/: 2026-001.yml
tests/: test_backoffice.py
